--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "dark-mode-demo-ssr",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "devDependencies": {
-    "@astrojs/netlify": "^0.4.4",
-    "astro": "^1.0.0-beta.47",
-    "sass": "^1.52.3"
-  }
+	"name": "dark-mode-demo-ssr",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview"
+	},
+	"devDependencies": {
+		"@astrojs/netlify": "^1.3.0",
+		"astro": "^1.9.1",
+		"sass": "^1.52.3"
+	}
 }
