--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "dark-mode-demo-ssr",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
